// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageCard > should render with many props assigned 1`] = `
<div>
  <article
    class="items-center bg-white [&_svg]:fill-secondary text-secondary flex flex-nowrap justify-around m-4 min-h-[100px] min-w-[100px] shadow-md focus-visible:outline-none md:flex-row flex-col md:h-56 md:w-[650px] md:max-w-none p-0 h-auto max-w-xs w-auto [&>*]:flex-[1_1_50%] test"
  >
    <div
      class="flex flex-col items-center justify-start m-4 overflow-y-auto"
    >
      <p>
        Testing!
      </p>
    </div>
    <div
      class="relative h-full"
    >
      <img
        alt="Test title"
        src="/static/images/Family1.jpg"
      />
    </div>
  </article>
</div>
`;

exports[`ImageCard > should render with required props 1`] = `
<div>
  <article
    class="items-center bg-white [&_svg]:fill-secondary text-secondary flex flex-nowrap justify-around m-4 min-h-[100px] min-w-[100px] shadow-md focus-visible:outline-none md:flex-row flex-col md:h-56 md:w-[650px] md:max-w-none p-0 h-auto max-w-xs w-auto [&>*]:flex-[1_1_50%]"
  >
    <div
      class="relative h-full w-full min-h-[225px]"
    >
      <img
        alt="Test title"
        src="/static/images/Family1.jpg"
      />
    </div>
    <div
      class="flex flex-col items-center justify-start m-4 overflow-y-auto"
    >
      <p>
        Testing!
      </p>
    </div>
  </article>
</div>
`;
